--- a/server/src/Identity/appsettings.json
+++ b/server/src/Identity/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=AJAX-DEV\\sql2016;Initial Catalog=Recipes;Integrated Security=True;"
+    "DefaultConnection": "Server=(local)\\sql2016;Database=Recipes;Integrated Security=SSPI;"
   },
   "Logging": {
     "LogLevel": {
