--- a/server/src/Api/appsettings.json
+++ b/server/src/Api/appsettings.json
@@ -2,6 +2,9 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=(local)\\sql2016;Database=Recipes;Integrated Security=SSPI;"
   },
+  "ProviderSettings": {
+    "Name": "Recipe"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
