--- a/server/src/Identity/Dockerfile
+++ b/server/src/Identity/Dockerfile
@@ -16,6 +16,8 @@ RUN dotnet build "Recipes.Identity.csproj" -c Release -o /app/build
 FROM build AS publish
 RUN dotnet publish "Recipes.Identity.csproj" -c Release -o /app/publish
 
+EXPOSE 1433/tcp
+
 FROM base AS final
 WORKDIR /app
 COPY --from=publish /app/publish .
