update prettier config and run linter

--- a/client/package.json
+++ b/client/package.json
@@ -59,7 +59,7 @@
       "node": true
     },
     "extends": [
-      "plugin:vue/essential",
+      "plugin:vue/strongly-recommended",
       "eslint:recommended",
       "@vue/typescript/recommended",
       "@vue/prettier",
@@ -67,8 +67,7 @@
     ],
     "parserOptions": {
       "ecmaVersion": 2020
-    },
-    "rules": {}
+    }
   },
   "browserslist": [
     "> 1%",
