allow for uploading images.

--- a/server/Core/Api/appsettings.json
+++ b/server/Core/Api/appsettings.json
@@ -10,5 +10,8 @@
   "RavenSettings": {
     "Urls": [ "http://localhost:8083" ],
     "DatabaseName": "Recipes"
+  },
+  "Google": {
+    "BucketName": "****"
   }
 }
