--- a/.gitignore
+++ b/.gitignore
@@ -299,3 +299,4 @@ FakesAssemblies/
 # Visual Studio 6 workspace options file
 *.opt
 /recipes-firebase-adminsdk.json
+/ajax-recipes-302122-031a7d94150f.json
