--- a/server/Core/Infrastructure/Recipes.Core.Infrastructure.csproj
+++ b/server/Core/Infrastructure/Recipes.Core.Infrastructure.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Google.Cloud.Storage.V1" Version="3.4.0" />
     <PackageReference Include="RavenDB.Client" Version="5.1.5" />
     <PackageReference Include="RavenDB.DependencyInjection" Version="4.0.0" />
   </ItemGroup>
