--- a/client/package.json
+++ b/client/package.json
@@ -51,6 +51,7 @@
     "prettier": "^1.19.1",
     "sass-loader": "^8.0.2",
     "typescript": "~3.9.3",
+    "vue-debounce-decorator": "^1.0.1",
     "vue-template-compiler": "^2.6.11"
   },
   "eslintConfig": {
