add magic link auth to client

--- a/server/Core/Api/appsettings.json
+++ b/server/Core/Api/appsettings.json
@@ -8,8 +8,18 @@
   },
   "AllowedHosts": "*",
   "RavenSettings": {
-    "Urls": [ "http://localhost:8080" ],
+    "Urls": [ "http://localhost:8083" ],
     "DatabaseName": "Recipes"
   },
-  "GoogleBucketName": "****"
+  "Auth": {
+    "JwtBearerSettings": {
+      "SecretKey": "****",
+      "Issuer": "****",
+      "Audience": "****",
+      "ExpiryTimeInSeconds": 60
+    }
+  },
+  "Google": {
+    "BucketName": "****" 
+  }
 }
