--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
 		"core-js": "^3.6.5",
 		"firebase": "^8.2.6",
 		"jsonwebtoken": "^8.5.1",
+		"lodash": "^4.17.21",
 		"magic-sdk": "^4.3.0",
 		"vue": "^2.6.12",
 		"vue-class-component": "^7.2.3",
@@ -35,6 +36,7 @@
 		"vuex-persistedstate": "^4.0.0-beta.3"
 	},
 	"devDependencies": {
+		"@types/lodash": "^4.14.171",
 		"@types/node": "^14.14.14",
 		"@typescript-eslint/eslint-plugin": "^2.33.0",
 		"@typescript-eslint/parser": "^2.33.0",
