--- a/client/package.json
+++ b/client/package.json
@@ -53,6 +53,7 @@
 		"lint-staged": "^9.5.0",
 		"node-sass": "^4.12.0",
 		"prettier": "^1.19.1",
+		"sass": "^1.37.0",
 		"sass-loader": "^8.0.2",
 		"typescript": "~3.9.3",
 		"vue-debounce-decorator": "^1.0.1",
