add rate limiting to core api. fix logout.

--- a/server/Core/Api/appsettings.json
+++ b/server/Core/Api/appsettings.json
@@ -21,6 +21,38 @@
   },
   "Google": {
     "BucketName": "****",
-    "CredentialsFilePath":  "****"
+    "CredentialsFilePath": "****"
+  },
+  "ConnectionStrings": {
+    "Redis": "localhost:6379"
+  },
+  "IpRateLimiting": {
+    "EnableEndpointRateLimiting": true,
+    "StackBlockedRequests": false,
+    "RealIpHeader": "X-Real-IP",
+    "ClientIdHeader": "X-ClientId",
+    "HttpStatusCode": 429,
+    "GeneralRules": [
+      {
+        "Endpoint": "get:/api/recipes*",
+        "Period": "30s",
+        "Limit": 15
+      },
+      {
+        "Endpoint": "post:*",
+        "Period": "15s",
+        "Limit": 4
+      },
+      {
+        "Endpoint": "put:*",
+        "Period": "15s",
+        "Limit": 4
+      },
+      {
+        "Endpoint": "delete:*",
+        "Period": "15s",
+        "Limit": 4
+      }
+    ]
   }
 }
