--- a/server/identity/package.json
+++ b/server/identity/package.json
@@ -29,6 +29,7 @@
     "@nestjs/mongoose": "^8.0.0",
     "@nestjs/passport": "^8.0.0",
     "@nestjs/platform-express": "^7.6.15",
+    "@nestjs/throttler": "^2.0.0",
     "class-transformer": "^0.4.0",
     "class-validator": "^0.13.1",
     "http-status-codes": "^2.1.4",
