--- a/server/identity/package.json
+++ b/server/identity/package.json
@@ -33,10 +33,12 @@
     "class-transformer": "^0.4.0",
     "class-validator": "^0.13.1",
     "http-status-codes": "^2.1.4",
+    "ioredis": "^4.27.7",
     "joi": "^17.4.1",
     "lodash": "^4.17.21",
     "mongodb-memory-server": "^7.3.2",
     "mongoose": "^5.13.3",
+    "nestjs-throttler-storage-redis": "^0.1.13",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
     "reflect-metadata": "^0.1.13",
