--- a/client/package.json
+++ b/client/package.json
@@ -47,17 +47,31 @@
 		"@vue/cli-service": "~4.5.0",
 		"@vue/eslint-config-prettier": "^6.0.0",
 		"@vue/eslint-config-typescript": "^5.0.2",
+		"browserslist": "^4.16.7",
+		"color-string": "^1.6.0",
+		"dns-packet": "^5.3.0",
+		"elliptic": "^6.5.4",
 		"eslint": "^6.7.2",
 		"eslint-plugin-prettier": "^3.1.3",
 		"eslint-plugin-vue": "^6.2.2",
+		"glob-parent": "^6.0.1",
+		"hosted-git-info": "^4.0.2",
+		"is-svg": "^4.3.1",
 		"lint-staged": "^9.5.0",
 		"node-sass": "^4.12.0",
+		"postcss": "^8.3.6",
 		"prettier": "^1.19.1",
 		"sass": "^1.37.0",
 		"sass-loader": "^8.0.2",
+		"ssri": "^8.0.1",
+		"tar": "^6.1.6",
+		"trim-newlines": "^4.0.2",
 		"typescript": "~3.9.3",
+		"url-parse": "^1.5.3",
 		"vue-debounce-decorator": "^1.0.1",
-		"vue-template-compiler": "^2.6.11"
+		"vue-template-compiler": "^2.6.11",
+		"ws": "^8.0.0",
+		"xmldom": "^0.6.0"
 	},
 	"eslintConfig": {
 		"root": true,
