--- a/client/package.json
+++ b/client/package.json
@@ -29,6 +29,7 @@
 		"vue-router": "^3.2.0",
 		"vue-select": "^3.11.2",
 		"vue-toast-notification": "^0.6.0",
+		"vue-youtube": "^1.4.0",
 		"vuelidate": "^0.7.6",
 		"vuelidate-property-decorators": "^1.0.28",
 		"vuex": "^3.6.0",
