--- a/server/identity/package.json
+++ b/server/identity/package.json
@@ -30,12 +30,14 @@
     "@nestjs/passport": "^8.0.0",
     "@nestjs/platform-express": "^7.6.15",
     "@nestjs/throttler": "^2.0.0",
+    "@nestjs/typeorm": "^8.0.2",
     "class-transformer": "^0.4.0",
     "class-validator": "^0.13.1",
     "http-status-codes": "^2.1.4",
     "ioredis": "^4.27.7",
     "joi": "^17.4.1",
     "lodash": "^4.17.21",
+    "mongodb": "^3.6.11",
     "mongodb-memory-server": "^7.3.2",
     "mongoose": "^5.13.3",
     "nestjs-throttler-storage-redis": "^0.1.13",
@@ -43,7 +45,8 @@
     "passport-jwt": "^4.0.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^6.6.6"
+    "rxjs": "^7.3.0",
+    "typeorm": "^0.2.36"
   },
   "devDependencies": {
     "@nestjs/cli": "^7.6.0",
@@ -52,6 +55,7 @@
     "@types/express": "^4.17.11",
     "@types/jest": "^26.0.22",
     "@types/lodash": "^4.14.171",
+    "@types/mongodb": "^4.0.7",
     "@types/node": "^14.14.36",
     "@types/passport-jwt": "^3.0.6",
     "@types/supertest": "^2.0.10",
