update packages from dependabot issues. uncomment code.

--- a/client/package.json
+++ b/client/package.json
@@ -60,6 +60,7 @@
 		"is-svg": "^4.3.1",
 		"lint-staged": "^9.5.0",
 		"node-sass": "^4.12.0",
+		"path-parse": "^1.0.7",
 		"postcss": "^8.3.6",
 		"prettier": "^1.19.1",
 		"sass": "^1.37.0",
@@ -69,6 +70,7 @@
 		"trim-newlines": "^4.0.2",
 		"typescript": "~3.9.3",
 		"url-parse": "^1.5.3",
+		"video.js": "^7.14.3",
 		"vue-debounce-decorator": "^1.0.1",
 		"vue-template-compiler": "^2.6.11",
 		"ws": "^8.0.0",
