Add shopping cart functionality to API

--- a/server/Core/Application/Recipes.Core.Application.csproj
+++ b/server/Core/Application/Recipes.Core.Application.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <Folder Include="Recipes\Dtos\Responses\" />
+    <Folder Include="ShoppingCarts\Validators\" />
   </ItemGroup>
 
   <ItemGroup>
