--- a/client/package.json
+++ b/client/package.json
@@ -10,70 +10,70 @@
 	},
 	"dependencies": {
 		"@types/axios": "^0.14.0",
-		"@types/jsonwebtoken": "^8.5.0",
+		"@types/jsonwebtoken": "^8.5.5",
 		"@types/vue-select": "^2.5.1",
-		"@types/vuelidate": "^0.7.13",
-		"@vuelidate/core": "^2.0.0-alpha.8",
-		"axios": "^0.21.1",
-		"bootstrap": "^4.5.3",
-		"bootstrap-vue": "^2.20.1",
-		"cloudinary-vue": "^1.1.2",
-		"core-js": "^3.6.5",
-		"firebase": "^8.2.6",
+		"@types/vuelidate": "^0.7.15",
+		"@vuelidate/core": "^2.0.0-alpha.27",
+		"axios": "^0.21.4",
+		"bootstrap": "^4.6.0",
+		"bootstrap-vue": "^2.21.2",
+		"cloudinary-vue": "^1.2.3",
+		"core-js": "^3.18.3",
+		"firebase": "^8.10.0",
 		"jsonwebtoken": "^8.5.1",
 		"lodash": "^4.17.21",
-		"magic-sdk": "^4.3.0",
-		"vue": "^2.6.12",
+		"magic-sdk": "^4.4.2",
+		"vue": "^2.6.14",
 		"vue-class-component": "^7.2.3",
 		"vue-property-decorator": "^8.4.2",
-		"vue-router": "^3.2.0",
-		"vue-select": "^3.11.2",
-		"vue-toast-notification": "^0.6.0",
+		"vue-router": "^3.5.2",
+		"vue-select": "^3.13.2",
+		"vue-toast-notification": "^0.6.2",
 		"vue-youtube": "^1.4.0",
 		"vuelidate": "^0.7.6",
 		"vuelidate-property-decorators": "^1.0.28",
-		"vuex": "^3.6.0",
+		"vuex": "^3.6.2",
 		"vuex-class": "^0.3.2",
-		"vuex-persistedstate": "^4.0.0-beta.3"
+		"vuex-persistedstate": "^4.1.0"
 	},
 	"devDependencies": {
-		"@types/lodash": "^4.14.171",
-		"@types/node": "^14.14.14",
+		"@types/lodash": "^4.14.175",
+		"@types/node": "^14.17.27",
 		"@typescript-eslint/eslint-plugin": "^2.33.0",
 		"@typescript-eslint/parser": "^2.33.0",
-		"@vue/cli-plugin-babel": "~4.5.0",
-		"@vue/cli-plugin-eslint": "~4.5.0",
-		"@vue/cli-plugin-router": "^4.5.9",
-		"@vue/cli-plugin-typescript": "~4.5.0",
-		"@vue/cli-service": "~4.5.0",
+		"@vue/cli-plugin-babel": "^4.5.14",
+		"@vue/cli-plugin-eslint": "^4.5.14",
+		"@vue/cli-plugin-router": "^4.5.14",
+		"@vue/cli-plugin-typescript": "^4.5.14",
+		"@vue/cli-service": "^4.5.14",
 		"@vue/eslint-config-prettier": "^6.0.0",
 		"@vue/eslint-config-typescript": "^5.0.2",
-		"browserslist": "^4.16.7",
+		"browserslist": "^4.17.4",
 		"color-string": "^1.6.0",
 		"dns-packet": "^5.3.0",
 		"elliptic": "^6.5.4",
 		"eslint": "^6.7.2",
-		"eslint-plugin-prettier": "^3.1.3",
+		"eslint-plugin-prettier": "^3.4.1",
 		"eslint-plugin-vue": "^6.2.2",
-		"glob-parent": "^6.0.1",
+		"glob-parent": "^6.0.2",
 		"hosted-git-info": "^4.0.2",
 		"is-svg": "^4.3.1",
 		"lint-staged": "^9.5.0",
 		"node-sass": "^4.12.0",
 		"path-parse": "^1.0.7",
-		"postcss": "^8.3.6",
+		"postcss": "^8.3.9",
 		"prettier": "^1.19.1",
-		"sass": "^1.37.0",
+		"sass": "^1.43.2",
 		"sass-loader": "^8.0.2",
 		"ssri": "^8.0.1",
-		"tar": "^6.1.6",
+		"tar": "^6.1.11",
 		"trim-newlines": "^4.0.2",
-		"typescript": "~3.9.3",
+		"typescript": "^3.9.10",
 		"url-parse": "^1.5.3",
-		"video.js": "^7.14.3",
+		"video.js": "^7.15.4",
 		"vue-debounce-decorator": "^1.0.1",
-		"vue-template-compiler": "^2.6.11",
-		"ws": "^8.0.0",
+		"vue-template-compiler": "^2.6.14",
+		"ws": "^8.2.3",
 		"xmldom": "^0.6.0"
 	},
 	"eslintConfig": {
